# TFitPiCAN_0.1.0

./: LICENSE  README.md  init_tfitpican.sh
.github/workflows/: Dockerfile.test  docs-workflow.yml  lint-and-typecheck-workflow.yml  test-workflow.yml
TFItPiCAN/: pyproject.toml
TFItPiCAN/confluence/: 01-introduction.md  02-architecture-overview.md  03-project-structure.md  04-package-documentation-complete.md  04-package-documentation.md  05-cross-platform-considerations.md  06-implementation-guidelines.md  07-conclusion.md  enhanced-documentation.md
TFItPiCAN/jira/: init.csv
TFitPiCAN_0.1.0/: README.md  requirements.txt
TFitPiCAN_0.1.0/Jira Tickets/: jira-tasks.csv
TFitPiCAN_0.1.0/src/: main.py
TFitPiCAN_0.1.0/src/scenarios/: scenario_manager.py
TFitPiCAN_0.1.0/src/tfitpican_simulator/: can_manager.py  can_sim.py
TFitPiCAN_0.1.0/tests/: test_can_sim.py
