[project]
name = "tfitpican"
version = "0.1.0"
description = "CAN Bus interface and simulator for Raspberry Pi"
authors = [
    {name = "Thomas Fischer"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-can (>=4.5.0,<5.0.0)",
    "pyqt6 (>=6.8.1,<7.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
flake8 = "^7.1.2"
mypy = "^1.15.0"

